--- a/terraform/www/index.html
+++ b/terraform/www/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>SecureApp</title>
-  </head>
+  <head><meta charset="utf-8"><title>SecureApp</title></head>
   <body>
-    <h1>Welcome to SecureApp!</h1>
-    <p>This web app runs inside a private VNet and is not publicly accessible.</p>
+    <h1>SecureApp</h1>
+    <p>Served by a custom Docker container inside a private VNet.</p>
   </body>
 </html>
